# mental-health-support

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
frontend/: package.json
frontend/src/: App.js  index.js
frontend/src/components/: TextToAudio.jsx  VoiceApp.jsx
